--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -6,7 +6,7 @@
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
     © {{ year }} Copyright:
     <a class="text-dark"
-       href="{{ home }}">{{ title_name }}</a>
+       href="#">{{ title_name }}</a>
   </div>
   <!-- Copyright -->
 </footer>
