--- a/templates/includes/login.html
+++ b/templates/includes/login.html
@@ -1,7 +1,6 @@
 {% extends 'pages/base.html' %}
 {% block content %}
     <section class="h-100">
-        {% csrf_token %}
         <div class="container h-100">
             <div class="row justify-content-md-center h-100">
                 <div class="card-wrapper"
@@ -16,11 +15,11 @@
                             <h4 class="card-title text-center">Login</h4>
                             <form method="POST" class="my-login-validation" novalidate="">{% csrf_token %}
                                 <div class="form-group">
-                                    <label for="email">E-Mail Address</label>
-                                    <input id="email" type="email" class="form-control" name="email" value="" required
+                                    <label for="username">Username</label>
+                                    <input id="username" type="email" class="form-control" name="username" value="" required
                                            autofocus>
                                     <div class="invalid-feedback">
-                                        Email is invalid
+                                        Username is valid
                                     </div>
                                 </div>
 
