--- a/templates/pages/base.html
+++ b/templates/pages/base.html
@@ -13,7 +13,16 @@
 </head>
 <body>
 {% include 'includes/navbar.html' %}
-
+{% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-success" role="alert">
+            <button class="close" data-dismiss="alert">
+                <small><sup>x</sup></small>
+            </button>
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endif %}
 {% block content %}
 
 {% endblock %}
