--- a/templates/includes/register.html
+++ b/templates/includes/register.html
@@ -4,7 +4,7 @@
         <div class="container h-100">
             <div class="row justify-content-md-center h-100">
                 <div class="card-wrapper"
-                style="padding: 50px 50px">
+                     style="padding-top: 20px; padding-bottom: 100px;">
                     <div class="card fat">
                         <div class="card-body">
                             <h4 class="card-title text-center">Register</h4>
